# plate_extract

./: CMakeLists.txt  README.md  code_M1.py  data.csv  instructions.md  main.cpp  plate_extract.py
